Fixing crashes in Graph